--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "npx patch-package",
+    "link-fonts":"npx react-native-asset",
+    "android:apk": "cd android && gradlew assembleRelease"
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.2",
