Revert "project setup"
This reverts commit 0376ddcc9147ca51a414a46c8559c6f3e975c092.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "postinstall": "npx patch-package",
-    "link-fonts":"npx react-native-asset",
-    "android:apk": "cd android && gradlew assembleRelease"
+    "test": "jest"
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.2",
